# cpp-new-project-template

./: .gitignore  CMakeLists.txt  README.md  run  setup_template  setup_template.sh
doc/: exp
includes/: main.hpp
src/: main.cpp
src/io/: utf8_config.cpp
